# LensDiff

./: .gitignore  .gitmodules  README.md  manager-release-config.json
.github/workflows/: build-lensdiff-all-platforms.yml  build-lensdiff-linux.yml  build-lensdiff-macos.yml  build-lensdiff-windows.yml  update-plugin-manager-manifest.yml
common/color/: ColorManagement.cpp  ColorManagement.h
docs/: development-plan.md  synthetic-sources.md
source/: BUILDING.md  CMakeLists.txt  CMakePresets.json  build_vc.bat  configure_vc.bat  sign_release.ps1
source/cmake/: ChromaspaceTextDeps.cmake  ExtractMetalSource.cmake  FindPkgConfig.cmake  Info.plist.in  InstallHarfBuzz.cmake  PatchFreeTypeCMake.cmake  PatchHarfBuzzMeson.cmake
source/installer/: LensDiff.iss
source/src/: LensDiff.cpp
source/src/core/: LensDiffApertureImage.cpp  LensDiffApertureImage.h  LensDiffCpuReference.cpp  LensDiffCpuReference.h  LensDiffDiagnostics.h  LensDiffFileDialog.cpp  LensDiffFileDialog.h  LensDiffFileDialog.mm  LensDiffPhase.cpp  LensDiffPhase.h  LensDiffSpectrum.cpp  LensDiffSpectrum.h  LensDiffTransfer.cpp  LensDiffTransfer.h  LensDiffTypes.h
source/src/cuda/: LensDiffCuda.cu  LensDiffCuda.h  LensDiffCudaVkFFT.cu  LensDiffCudaVkFFT.h
source/src/metal/: LensDiffMetal.h  LensDiffMetal.mm  LensDiffMetalVkFFT.h  LensDiffMetalVkFFT.mm
testdata/synthetic/: annular_probe_1024x1024.tif  diagonal_glints_1024x1024.tif  exposure_bars_1024x1024.tif  impulse_center_1024x1024.tif  impulse_edge_1024x1024.tif  manifest.json  odd_dim_grid_1023x577.tif  point_grid_1024x1024.tif  practicals_beauty_1024x1024.tif  spectral_points_1024x1024.tif  spider_vane_probe_1024x1024.tif  window_slits_1024x1024.tif
tools/: generate_synthetic_sources.py  synthetic_requirements.txt
